WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
177321
Regression(
r222308
): new API tests are failing for !NETWORK_SESSION
https://bugs.webkit.org/show_bug.cgi?id=177321
Summary
Regression(r222308): new API tests are failing for !NETWORK_SESSION
Chris Dumez
Reported
2017-09-21 12:59:21 PDT
new API tests are failing for !NETWORK_SESSION.
Attachments
Patch
(2.00 KB, patch)
2017-09-21 13:02 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(3.82 KB, patch)
2017-09-21 13:21 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2017-09-21 13:02:33 PDT
Created
attachment 321468
[details]
Patch
Chris Dumez
Comment 2
2017-09-21 13:03:15 PDT
Failures look like so: FAIL _WKDownload.RedirectedLoadConvertedToDownload /Volumes/Data/slave/elcapitan-release/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/Download.mm:472 Value of: [url.absoluteString UTF8String] Actual: "
http://pass/
" Expected: "
http://redirect/?pass
" /Volumes/Data/slave/elcapitan-release/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/Download.mm:481 Value of: redirectChain.count Actual: 4 Expected: 3U Which is: 3 /Volumes/Data/slave/elcapitan-release/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/Download.mm:545 Value of: redirectCount Actual: 1 Expected: 0U Which is: 0 FAIL _WKDownload.RedirectedSubframeLoadConvertedToDownload /Volumes/Data/slave/elcapitan-release/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/Download.mm:472 Value of: [url.absoluteString UTF8String] Actual: "
http://pass/
" Expected: "
http://redirect/?pass
" /Volumes/Data/slave/elcapitan-release/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/Download.mm:481 Value of: redirectChain.count Actual: 4 Expected: 3U Which is: 3 /Volumes/Data/slave/elcapitan-release/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/Download.mm:567 Value of: redirectCount Actual: 1 Expected: 0U Which is: 0
Chris Dumez
Comment 3
2017-09-21 13:21:26 PDT
Created
attachment 321470
[details]
Patch
WebKit Commit Bot
Comment 4
2017-09-21 15:08:43 PDT
Comment on
attachment 321470
[details]
Patch Clearing flags on attachment: 321470 Committed
r222355
: <
http://trac.webkit.org/changeset/222355
>
WebKit Commit Bot
Comment 5
2017-09-21 15:08:44 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2017-09-27 12:19:13 PDT
<
rdar://problem/34693029
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug