Regression(r222308): new API tests are failing for !NETWORK_SESSION https://bugs.webkit.org/show_bug.cgi?id=177321

Reviewed by Alex Christensen.

Source/WebKit:

When a load is redirected and then converted into a download, CFNetwork
seems to call [NSURLDownloadDelegate willSendRequest:] on the download
with a non-nil redirectResponse, which was unexpected.

To address the issue, we now ignore the willSendRequest call if the
new request's URL is the same as the redirectResponse one.

* NetworkProcess/Downloads/mac/DownloadMac.mm:
(-[WKDownloadAsDelegate download:willSendRequest:redirectResponse:]):

Tools:

Unskip API tests now that they pass everywhere.

* TestWebKitAPI/Tests/WebKitCocoa/Download.mm:
(TEST):


Canonical link: https://commits.webkit.org/193662@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@222355 268f45cc-cd09-0410-ab3c-d52691b4dbfc