Source/WebKit/NetworkProcess/Downloads/mac/DownloadMac.mm
@@ -209,7 +209,7 @@ static void dispatchOnMainThread(void (^block)())
 - (NSURLRequest *)download:(NSURLDownload *)download willSendRequest:(NSURLRequest *)request redirectResponse:(NSURLResponse *)redirectResponse
 {
     dispatchOnMainThread(^ {
-        if (_download && redirectResponse)
+        if (_download && redirectResponse && ![request.URL isEqual:redirectResponse.URL])
             _download->willSendRedirectedRequest(request, redirectResponse);
     });
     return request;
